feature: small training with optional + supplier(lazy initializing)