@@ -1,6 +1,8 @@
 package com.training.StreamAPITraining;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 public class Main {
@@ -8,13 +10,26 @@ public class Main {
     Data data = new Data();
     List<Person> persons = data.getPersons();
 
-    List<Person> persons2 = persons.stream()
-        .sorted()
+    Supplier<List<Person>> persons2 = () -> persons.stream()
+        .map(person -> new Person(person.getName() + " Miracle", person.getLastname(),
+            person.getAge()))
         .filter(s -> s.getAge() > 50)
-        .toList();
+        .collect(Collectors.toList());
 
-    for(Person el : persons) {
+     Optional<Person> persons3 = persons.stream()
+        .filter(s -> s.getAge() > 50)
+        .findAny();
+
+    persons2.get().forEach(System.out::println);
+
+    System.out.println(persons3);
+
+    System.out.println(persons.stream()
+        .filter(s -> s.getAge() > 50)
+        .count());
+
+    /*for(Person el : persons2.get()) {
       System.out.println(el);
-    }
+    }*/
   }
 }
